--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <link rel="icon" href="/images/icon/logo.svg" />
 
     <title>Dion Gultom</title>
 
@@ -23,7 +24,7 @@
     >
       <div class="container">
         <a href="/index.html" class="navbar-brand">
-          <img src="/images/logo.svg" alt="Logo" />
+          <img src="/images/icon/logo.svg" alt="Logo" />
         </a>
         <button
           class="navbar-toggler"
@@ -61,10 +62,18 @@
                 <a href="mailto:dionmarusahagultom@gmail.com">
                   <button class="my-button mx-auto mx-lg-5">Hire Me</button>
                 </a>
+                <br />
+                <a
+                  href="/images/cv/cv_dion-gultom.pdf"
+                  target="_blank"
+                  class="cv mx-auto mx-lg-5"
+                >
+                  Download CV
+                </a>
               </div>
               <div class="col-12 col-md-6 col-lg-6 mb-2">
                 <img
-                  src="/images/foto-profil.png"
+                  src="/images/foto-profil@2x.png"
                   alt=""
                   class="profil-picture rounded-circle"
                 />
@@ -81,7 +90,7 @@
               </div>
               <div class="col-12 col-md-4 col-lg-4">
                 <img
-                  src="/images/foto-profil.png"
+                  src="/images/foto-profil@2x.png"
                   class="profil-picture"
                   alt=""
                 />
@@ -310,66 +319,62 @@
               <div class="col-12 col-md-6 col-lg-4 mt-2 portfolio">
                 <div class="card text-center">
                   <div class="card-body">
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Home Page.png"
-                      alt=""
-                    />
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Details.png"
-                      alt=""
-                    />
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Checkout.png"
-                      alt=""
-                    />
-                    <p class="portfolio-title">Personal Website</p>
+                    <a href="https://bit.ly/2Qv4kLC" target="_blank">
+                      <img
+                        class="latest-work"
+                        src="/images/icon/portfolio-3@2x.png"
+                        alt=""
+                      />
+                      <p class="portfolio-title">Personal Website</p>
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4 mt-2 portfolio">
                 <div class="card text-center">
                   <div class="card-body">
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Home Page.png"
-                      alt=""
-                    />
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Details.png"
-                      alt=""
-                    />
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Checkout.png"
-                      alt=""
-                    />
-                    <p class="portfolio-title">Website Travel</p>
+                    <a href="https://bit.ly/3e8sQdL" target="_blank">
+                      <img
+                        class="latest-work"
+                        src="/images/icon/Home Page.png"
+                        alt=""
+                      />
+                      <img
+                        class="latest-work"
+                        src="/images/icon/Details.png"
+                        alt=""
+                      />
+                      <img
+                        class="latest-work"
+                        src="/images/icon/Checkout.png"
+                        alt=""
+                      />
+                      <p class="portfolio-title">Website Travel</p>
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4 mt-2 mb-3 portfolio">
                 <div class="card text-center">
                   <div class="card-body">
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Landing.png"
-                      alt=""
-                    />
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Details Page.png"
-                      alt=""
-                    />
-                    <img
-                      class="latest-work"
-                      src="/images/icon/Sign Up [States].png"
-                      alt=""
-                    />
-                    <p class="portfolio-title">E-Commerce</p>
+                    <a href="https://bit.ly/3giep9J" target="_blank">
+                      <img
+                        class="latest-work"
+                        src="/images/icon/Landing.png"
+                        alt=""
+                      />
+                      <img
+                        class="latest-work"
+                        src="/images/icon/Details Page.png"
+                        alt=""
+                      />
+                      <img
+                        class="latest-work"
+                        src="/images/icon/Sign Up [States].png"
+                        alt=""
+                      />
+                      <p class="portfolio-title">E-Commerce</p>
+                    </a>
                   </div>
                 </div>
               </div>
