--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section class="profile">
         <div class="container">
           <!-- Intro -->
-          <div class="container one">
+          <div class="container one" data-aos="fade-up" data-aos-delay="500">
             <div class="row">
               <div class="col-12 col-md-6 col-lg-6 mt-2">
                 <p class="hello">Hello !</p>
@@ -82,7 +82,7 @@
           </div>
 
           <!-- About Me -->
-          <div class="container one">
+          <div class="container one" data-aos="fade-left" data-aos-delay="600">
             <div class="row">
               <div class="col-12 mt-2">
                 <div class="title">MAIN INFO</div>
@@ -109,7 +109,7 @@
           </div>
 
           <!-- Skills -->
-          <div class="container one">
+          <div class="container one" data-aos="fade-right" data-aos-delay="700">
             <div class="row">
               <div class="col-12 mt-3">
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
@@ -310,7 +310,7 @@
           </div>
 
           <!-- Portfolio -->
-          <div class="container one">
+          <div class="container one" data-aos="fade-left" data-aos-delay="800">
             <div class="row">
               <div class="col-12">
                 <p class="title">PORTFOLIO</p>
@@ -382,7 +382,7 @@
           </div>
 
           <!-- Contact -->
-          <div class="container one">
+          <div class="container one" data-aos="fade-right" data-aos-delay="900">
             <div class="row">
               <div class="col-12">
                 <p class="title">CONTACT</p>
@@ -429,7 +429,7 @@
     </div>
 
     <footer>
-      <div class="container">
+      <div class="container" data-aos="fade-down" data-aos-delay="500">
         <div class="row">
           <div class="col-12 text-center">
             <p class="pt-4 pb-2">Copyright &copy; 2020 || Dion Gultom</p>
