--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     </div>
 
     <footer>
-      <div class="container" data-aos="fade-down" data-aos-delay="500">
+      <div class="container">
         <div class="row">
           <div class="col-12 text-center">
             <p class="pt-4 pb-2">Copyright &copy; 2020 || Dion Gultom</p>
