--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   <body>
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg navbar-light navbar-landing-page fixed-top navbar-fixed-top"
+      class="
+        navbar navbar-expand-lg navbar-light navbar-landing-page
+        fixed-top
+        navbar-fixed-top
+      "
       data-aos="fade-down"
     >
       <div class="container">
@@ -64,7 +68,7 @@
                 </a>
                 <br />
                 <a
-                  href="/images/cv/cv_dion_gultom.pdf"
+                  href="/images/cv/cv_dion_marusaha_gultom.pdf"
                   target="_blank"
                   class="cv mx-auto mx-lg-5"
                 >
@@ -97,13 +101,18 @@
               </div>
 
               <div
-                class="col-12 col-md-8 col-lg-8 mt-3 mb-3 justify-content-center"
+                class="
+                  col-12 col-md-8 col-lg-8
+                  mt-3
+                  mb-3
+                  justify-content-center
+                "
               >
-                Hi! My name is Dion Gultom. I am a Front End Web Developer. I'm
-                focus on Slicing, Responsive. Animation on design. Very
+                Hi! My name is Dion Gultom. I am a front end web developer. I'm
+                focus on Slicing, Responsive and Make Animation on design. Very
                 motivated to continue to develop my abilities and grow
                 professionally. I am familiar with HTML, CSS, Javasript, Adobe
-                XD, Figma, Bootstrap, SASS, Vue JS, and React JS.
+                XD, Figma, Bootstrap, SASS and React Js.
               </div>
             </div>
           </div>
@@ -205,14 +214,6 @@
                           alt=""
                         />
                         <p class="icon-title">JQuery</p>
-                      </div>
-                      <div class="col-lg-3 col-md-4 col-6">
-                        <img
-                          class="icon-skills"
-                          src="/images/icon/vue.png"
-                          alt=""
-                        />
-                        <p class="icon-title">Vue JS</p>
                       </div>
                       <div class="col-lg-3 col-md-4 col-6">
                         <img
